working on magic box

--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="src/javazoom.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Katie/Downloads/robot.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Katie/Downloads/javazoom.jar"/>
+	<classpathentry kind="lib" path="src/_03_jars/_3_magic_box/javazoom (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
